syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package="grpc";

message Event {
 int64 ID = 1;
 int64 UserID = 2;
 string Title = 3;
 string Description = 4;
 google.protobuf.Timestamp StartDate = 5;
 google.protobuf.Timestamp EndDate = 6;
 google.protobuf.Timestamp NotifiedAt = 7;
}

message EventsResponse {
  repeated Event events = 1;
}

message UpdateEventRequest {
  int64 id = 1;
  Event event = 2;
}

message DeleteEventRequest {
  int64 id = 1;
}

service Calendar {
  rpc DayEvents (google.protobuf.Timestamp) returns (EventsResponse) {}
  rpc WeekEvents (google.protobuf.Timestamp) returns (EventsResponse) {}
  rpc MonthEvents (google.protobuf.Timestamp) returns (EventsResponse) {}

  rpc CreateEvent (Event) returns (Event) {}
  rpc UpdateEvent (UpdateEventRequest) returns (Event) {}
  rpc DeleteEvent (DeleteEventRequest) returns (google.protobuf.Empty) {}
}
